added pagination and products

--- a/class-one/index.html
+++ b/class-one/index.html
@@ -63,7 +63,73 @@
                                 <span>N7500.00</span>
                             </div>
 
-                            <p>10 types of shoos available</p>
+                            <p>10 types of shoes available</p>
+
+                            <div>
+                                <img src="" alt="">
+                                <span>(121)</span>
+                            </div>
+                        </div>
+                        <button>View Details</button>
+                    </div>
+                </div>
+                <div class="shoe">
+                    <div class="shoe-image">
+                        <img src="./images/red-shoe2.png" alt="">
+                    </div>
+
+                    <div class="shoe-text">
+                        <div>
+                            <div>
+                                <span>Vans</span>
+                                <span>N7500.00</span>
+                            </div>
+
+                            <p>10 types of shoes available</p>
+
+                            <div>
+                                <img src="" alt="">
+                                <span>(121)</span>
+                            </div>
+                        </div>
+                        <button>View Details</button>
+                    </div>
+                </div>
+                <div class="shoe">
+                    <div class="shoe-image">
+                        <img src="./images/stilletos.png" alt="">
+                    </div>
+
+                    <div class="shoe-text">
+                        <div>
+                            <div>
+                                <span>Stiletos</span>
+                                <span>N7500.00</span>
+                            </div>
+
+                            <p>10 types of shoes available</p>
+
+                            <div>
+                                <img src="" alt="">
+                                <span>(121)</span>
+                            </div>
+                        </div>
+                        <button>View Details</button>
+                    </div>
+                </div>
+                <div class="shoe">
+                    <div class="shoe-image">
+                        <img src="./images/heels.png" alt="">
+                    </div>
+
+                    <div class="shoe-text">
+                        <div>
+                            <div>
+                                <span>Heels</span>
+                                <span>N7500.00</span>
+                            </div>
+
+                            <p>10 types of shoes available</p>
 
                             <div>
                                 <img src="" alt="">
@@ -79,6 +145,16 @@
 
         <div>
 
+        </div>
+
+        <div>
+            <button>
+                previous
+            </button>
+            <p>1 2 3 4 5 6 7</p>
+            <button>
+                next
+            </button>
         </div>
     </main>
 
