--- a/class-one/index.html
+++ b/class-one/index.html
@@ -140,21 +140,21 @@
                     </div>
                 </div>
             </div>
-            <div class="pagination"></div>
+            <div class="pagination">
+                <button>Previous</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>4</button>
+                <button>6</button>
+                <button>7</button>
+                <button>Next</button>
+            </div>
         </div>
 
         <div>
-
-        </div>
-
-        <div>
-            <button>
-                previous
-            </button>
-            <p>1 2 3 4 5 6 7</p>
-            <button>
-                next
-            </button>
+            
         </div>
     </main>
 
