footer and pagination

--- a/class-one/index.html
+++ b/class-one/index.html
@@ -153,13 +153,32 @@
             </div>
         </div>
 
-        <div>
-            
+        <div class="Testimonials">
+            <div class="avatar"><img src="./images/3d_avatar_21.png" alt=""></div>
+            <div class="avatar-text">
+                <p>I recently purchased a pair of sneakers from SoleMart, and I couldn't be happier with my experience. The website was easy to navigate, and I found exactly what I was looking for within minutes.
+                </p>
+                <p>Joshua Kim</p>
+            </div>
         </div>
     </main>
 
-
-    <footer></footer>
+    <footer>
+        <div>
+            <small>Copyright @2024 Solemart Nig.</small>
+            <small>All rights reserved</small>
+            <div class="footer-icons">
+                <a href="+"></a>
+                <a href="+"></a>
+                <a href="+"></a>
+                <a href="+"></a>
+            </div>
+        </div>
+        <div>
+            <p>Stay up to date</p>
+            <input type="email">
+        </div>
+    </footer>
 
 </body>
 </html>
