--- a/class-one/index.html
+++ b/class-one/index.html
@@ -38,12 +38,12 @@
             </div>
         </nav>
 
-        <div>
-            <div>
+        <div class="promotions">
+            <div class="first-col">
                 <h1>Grab Up to 5% Off On Selected Shoe</h1>
                 <button>Buy Now</button>
             </div>
-            <div>
+            <div class="second-col">
                 <img src="./images/first-shoe.png" alt="">
             </div>
         </div>
